<?xml version="1.0" encoding="utf-8"?><!--
 Copyright (c) 2010-2012 Stefan Handschuh

 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
 in the Software without restriction, including without limitation the rights
 to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 copies of the Software, and to permit persons to whom the Software is
 furnished to do so, subject to the following conditions:

 The above copyright notice and this permission notice shall be included in
 all copies or substantial portions of the Software.

 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
-->
<resources>

    <!-- GENERAL -->
    <string name="about_technoxist">About technoXist</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_all_read">Mark all as read</string>
    <string name="error">Error</string>
    <string name="network_error">The network is not set up</string>
    <string name="loading">Loading…</string>
    <string name="no_result">No result</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="back_again_to_quit">Press back once more to exit</string>

    <!-- FEEDS -->
    <string name="error_feed_error">The feed address could not accessed.</string>
    <string name="error_feed_process">The feed can not be processed.</string>

    <!-- ENTRIES -->
    <string name="all">All</string>
    <string name="favorites">Bookmarks</string>
    <string name="show_all">Show all</string>
    <string name="show_unread">Show unread only</string>
    <string name="context_menu_share_starred">Share bookmarked articles</string>
    <string name="menu_star">Bookmark</string>
    <string name="menu_share">Share</string>
    <string name="menu_full_screen">Full screen</string>
    <string name="menu_copy_clipboard">Copy link</string>
    <string name="menu_mark_as_unread">Mark as unread</string>
    <string name="share_favorites_title">technoxist: bookmarked articles</string>
    <string name="copied_clipboard">Link copied</string>
    <string name="get_full_text">Retrieve the full text</string>
    <string name="original_text">Show original text</string>
    <string name="see_enclosure">See enclosure</string>
    <string name="see_link">See in browser</string>
    <string name="cant_open_link">No application found for this link</string>
    <string name="open_enclosure">Open enclosure</string>
    <string name="file">File</string>
    <string name="download_and_save">Download and save</string>
    <string name="open_link">Open link</string>

    <!-- WIDGET -->
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="transparency">Transparency</string>

    <!-- SETTINGS -->
    <string name="settings_category_refresh">Automated refresh</string>
    <string name="settings_refresh_enabled">Enable automatic refresh</string>
    <string name="settings_refresh_enabled_description">Enable the automatic refresh of feeds
    </string>
    <string name="settings_refresh_interval">Refresh interval</string>
    <string name="settings_category_notifications">Notifications</string>
    <string name="settings_notifications_enabled">Enable notifications</string>
    <string name="settings_notifications_enabled_description">Enable notifications in case of new
        articles
    </string>
    <string name="settings_notifications_ringtone">Ringtone</string>
    <string name="settings_notifications_ringtone_none">None</string>
    <string name="settings_notifications_vibrate">Vibrate</string>
    <string name="settings_notifications_vibrate_description">Enable the vibration on new articles
    </string>
    <string name="settings_category_content_presentation">Content presentation</string>
    <string name="settings_keep_time">Time that the articles will be kept</string>
    <string name="settings_display_images">Display images</string>
    <string name="settings_display_images_description">Display images in articles</string>
    <string name="settings_preload_image_mode">Preload images</string>
    <string name="settings_font_size">Text size</string>
    <string name="settings_display_oldest_first">Article order</string>
    <string name="settings_display_oldest_first_description">Display oldest articles first</string>
    <string name="settings_display_entries_fullscreen">Auto-fullscreen articles</string>
    <string name="settings_display_entries_fullscreen_description">Automatically display articles in fullscreen</string>
    <string name="settings_refresh_on_open">Refresh articles on open</string>
    <string name="settings_refresh_on_open_description">Refreshes all articles after opening the
        application
    </string>
    <string name="settings_refresh_wifi_only">Refresh only with Wifi</string>
    <string name="settings_refresh_wifi_only_description">Automatic refresh will be done if when the
        wifi is enabled
    </string>
    <string name="settings_visible_feeds">Visible category</string>
    <string name="settings_widget_background">Background</string>
    <string name="settings_widget_background_description">Color and transparency of the widget
        background
    </string>
    <string name="all_feeds">All Categories</string>
    <string name="settings_screen_proxy">Proxy</string>
    <string name="settings_category_network">Network</string>
    <string name="settings_proxy_enabled">Enabled</string>
    <string name="settings_proxy_wifi_only">Wifi only</string>
    <string name="settings_proxy_wifi_only_description">Use Proxy only for wifi</string>
    <string name="settings_proxy_host">Host</string>
    <string name="settings_proxy_port">Port</string>
    <string name="settings_proxy_type">Type</string>

    <plurals name="number_of_new_entries">
        <item quantity="one">One new Article</item>
        <item quantity="other">%d new Articles</item>
    </plurals>
    <string name="number_of_unread_entries">unread</string>

    <string-array name="settings_intervals">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
    </string-array>
    <string-array name="settings_keep_times">
        <item>1 day</item>
        <item>2 days</item>
        <item>4 days</item>
        <item>1 week</item>
        <item>2 weeks</item>
        <item>1 month</item>
        <item>2 months</item>
        <item>3 months</item>
        <item>Forever</item>
    </string-array>
    <string-array name="settings_font_sizes">
        <item>-2</item>
        <item>-1</item>
        <item>Standard</item>
        <item>+1</item>
        <item>+2</item>
        <item>+3</item>
    </string-array>
    <string-array name="settings_preload_image_modes">
        <item>Never</item>
        <item>Only over Wi-Fi</item>
        <item>Always</item>
    </string-array>

</resources>
